; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_gui_mac.c_EventModifiers2VimMouseModifiers.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_gui_mac.c_EventModifiers2VimMouseModifiers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shiftKey = common dso_local global i32 0, align 4
@rightShiftKey = common dso_local global i32 0, align 4
@MOUSE_SHIFT = common dso_local global i32 0, align 4
@controlKey = common dso_local global i32 0, align 4
@rightControlKey = common dso_local global i32 0, align 4
@MOUSE_CTRL = common dso_local global i32 0, align 4
@optionKey = common dso_local global i32 0, align 4
@rightOptionKey = common dso_local global i32 0, align 4
@MOUSE_ALT = common dso_local global i32 0, align 4
@MOUSE_CMD = common dso_local global i32 0, align 4
@cmdKey = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EventModifiers2VimMouseModifiers(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @shiftKey, align 4
  %6 = load i32, i32* @rightShiftKey, align 4
  %7 = or i32 %5, %6
  %8 = and i32 %4, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @MOUSE_SHIFT, align 4
  %12 = load i32, i32* %3, align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %10, %1
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @controlKey, align 4
  %17 = load i32, i32* @rightControlKey, align 4
  %18 = or i32 %16, %17
  %19 = and i32 %15, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %14
  %22 = load i32, i32* @MOUSE_CTRL, align 4
  %23 = load i32, i32* %3, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %21, %14
  %26 = load i32, i32* %2, align 4
  %27 = load i32, i32* @optionKey, align 4
  %28 = load i32, i32* @rightOptionKey, align 4
  %29 = or i32 %27, %28
  %30 = and i32 %26, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %25
  %33 = load i32, i32* @MOUSE_ALT, align 4
  %34 = load i32, i32* %3, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %32, %25
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
